package com.daw.cinemadaw.domain.cinema;

public enum ReturnStatus {
    PENDING,
    CONFIRMED,
    REJECTED
}
