package com.daw.cinemadaw.domain.cinema;

// Enumeració de rols possibles
public enum Role {
    ADMIN,
    CLIENT
}