package com.daw.cinemadaw.domain.cinema;

public enum TicketStatus {
    ACTIVE,
    RETURN_REQUESTED,
    CANCELLED
}
